--- a/Tutorial8.Rmd
+++ b/Tutorial8.Rmd
@@ -3,7 +3,7 @@ title: "Corona Virus Report"
 author:
 - familyname: XXXX
   othernames: XXX
-  address: Monash Universtidy
+  address: Monash University
   email: XXX
   correspondingauthor: true
   qualifications:  XXX
@@ -52,6 +52,26 @@ library(bookdown)
 
 \section*{Country XX2 and YY2}
 
+```{r read in data section 2}
+covidsection2 <- read_csv("Data/worldwidecases.csv")
+```
+
+```{r filter for section 2 countries}
+france_italy <- covidsection2 %>%
+  filter(countriesAndTerritories %in% c("France", "Italy"))
+```
+
+```{r count cases and deaths for france and italy}
+france_italy_cases <- france_italy %>%
+  group_by(countriesAndTerritories) %>%
+  tally(cases)
+
+france_italy_deaths <- france_italy %>%
+  group_by(countriesAndTerritories) %>%
+  tally(deaths)
+```
+
+By 10 May 2020, Italy had recorded 
 \section*{Country XX3 and YY3}
 
 
