--- a/references.bib
+++ b/references.bib
@@ -29,7 +29,16 @@
   year    =  1964
 }
 
-
+@article{alqutob2020covid,
+  title={COVID-19 crisis in Jordan: Response, scenarios, strategies, and recommendations},
+  author={Alqutob, Raeda and Al Nsour, Mohannad and Tarawneh, Mohammed Rasoul and Ajlouni, Musa and Khader, Yousef and Aqel, Ibrahim and Kharabsheh, Saad and Obeidat, Nathir},
+  journal={JMIR public health and surveillance},
+  volume={6},
+  number={3},
+  pages={e19332},
+  year={2020},
+  publisher={JMIR Publications Inc., Toronto, Canada}
+}
 @ARTICLE{HK06,
   title     = {Another look at measures of forecast accuracy},
   author    = "Hyndman, Rob J and Koehler, Anne B",
